k8s/aws/document-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-service
  namespace: loan-management
spec:
  template:
    spec:
      serviceAccountName: document-service-aws
      automountServiceAccountToken: true
      containers:
        - name: document-service
